# backend/internal/dto/symptoms.go
@@ -1,0 +1,33 @@
+package dto
+
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
+
+type GetSymptoms struct {
+	ID             uuid.UUID
+	Date           time.Time
+	Sneezing       int32
+	Runny          int32
+	Itchy          int32
+	PollenLevel    int32
+	TookMedication bool
+	Note           string
+	CreatedAt      time.Time
+	UpdatedAt      time.Time
+}
+
+type CreateSymptoms struct {
+	ID             uuid.UUID
+	Date           time.Time
+	Sneezing       int32
+	Runny          int32
+	Itchy          int32
+	PollenLevel    int32
+	TookMedication bool
+	Note           string
+	CreatedAt      time.Time
+	UpdatedAt      time.Time
+}
